minor backend changes

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -48,6 +48,13 @@
       "service": "Lambda"
     }
   },
+  "hosting": {
+    "amplifyhosting": {
+      "providerPlugin": "awscloudformation",
+      "service": "amplifyhosting",
+      "type": "manual"
+    }
+  },
   "parameters": {
     "AMPLIFY_function_livenesspoc6fcd328a_deploymentBucketName": {
       "usedBy": [
@@ -62,6 +69,22 @@
         {
           "category": "function",
           "resourceName": "livenesspoc6fcd328a"
+        }
+      ]
+    },
+    "AMPLIFY_hosting_amplifyhosting_appId": {
+      "usedBy": [
+        {
+          "category": "hosting",
+          "resourceName": "amplifyhosting"
+        }
+      ]
+    },
+    "AMPLIFY_hosting_amplifyhosting_type": {
+      "usedBy": [
+        {
+          "category": "hosting",
+          "resourceName": "amplifyhosting"
         }
       ]
     }
